src/tests/ci/assignment_5_functions/invalid_syntax/02_missing_close_paren.c
int add(int a, int b {  // Missing )
    return a + b;
}

int main() {
    return add(2, 3);
}